--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests
-pandas
-geopandas
-logging
-argparse
+requests==2.22.0
+beautifulsoup4==4.8.2
+pandas==1.4.1
+matplotlib==3.1.2
+geopandas==0.10.2
