--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-requests==2.22.0
+requests==2.27.1
 beautifulsoup4==4.8.2
 pandas==1.4.1
-matplotlib==3.1.2
-geopandas==0.10.2
+matplotlib==3.5.1
+geopy==2.2.0
